tests/baselines/reference/genericCallWithObjectLiteralArgs.errors.txt
tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectLiteralArgs.ts(5,9): error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Try specifying the type arguments explicitly.


==== tests/cases/conformance/types/typeRelationships/typeInference/genericCallWithObjectLiteralArgs.ts (1 errors) ====
    function foo<T>(x: { bar: T; baz: T }) {
        return x;
    }
    
    var r = foo({ bar: 1, baz: '' }); // error
            ~~~
!!! error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Try specifying the type arguments explicitly.
    var r2 = foo({ bar: 1, baz: 1 }); // T = number
    var r3 = foo({ bar: foo, baz: foo }); // T = typeof foo
    var r4 = foo<Object>({ bar: 1, baz: '' }); // T = Object